plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/multiTargetIndependentProject/libOne/src/jvmMain/kotlin/JvmSpecific.kt
actual fun <!LINE_MARKER("descr='Has expects in multiTargetIndependentProject.libOne.commonMain module'"), LINE_MARKER("descr='Implements function in Common.kt Press ... to navigate'")!>writeLogMessage<!>(message: String) {
    println("JVM LOG: $message")
}
